option java_outer_classname="DropIndexCommandProtocol";
package Alachisoft.NosDB.Common.Protobuf;
option java_package = "com.alachisoft.nosdb.common.protobuf";

message DropIndexCommand 
{	
	repeated string attributes = 1;
	optional bool isAsync = 2;
	optional sint32 IndexDropedCallbackId = 3;
}